# datalibrary

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  LICENSE  README  README.md  TODO  appveyor.yml  bam.lua  build_with_bam.bat
.github/workflows/: unittest.yml  valgrind.yml
benchmark/: dlbench.cpp  dlbench.tld
bind/cs/: libdl.cs
bind/luaffi/: libdl.lua
bind/python/: libdl.py
compat/: build_bam.bat
compat/msvs10/win32/: cl.bat  lib.bat  link.bat
compat/msvs10/winx64/: cl.bat  lib.bat  link.bat
compat/msvs14/win32/: cl.bat  lib.bat  link.bat
compat/msvs14/winx64/: cl.bat  lib.bat  link.bat
compat/msvs8/win32/: cl.bat  lib.bat  link.bat
compat/msvs8/winx64/: cl.bat  lib.bat  link.bat
include/dl/: dl.h  dl_bit.h  dl_convert.h  dl_defines.h  dl_reflect.h  dl_txt.h  dl_typelib.h  dl_util.h
script/: bootstrap.bat  bootstrap.sh
src/: datalibrary.natvis  dl.cpp  dl.cpp.bak  dl_alloc.cpp  dl_alloc.h  dl_assert.h  dl_binary_writer.h  dl_config.h  dl_convert.cpp  dl_hash.h  dl_internal_util.h  dl_patch_ptr.cpp  dl_patch_ptr.h  dl_reflect.cpp  dl_store.h  dl_swap.h  dl_temp.h  dl_traits.h  dl_txt_pack.cpp  dl_txt_read.cpp  dl_txt_read.h  dl_txt_unpack.cpp  dl_typelib_read_bin.cpp  dl_typelib_read_txt.cpp  dl_typelib_write_bin.cpp  dl_typelib_write_c_header.cpp  dl_typelib_write_txt.cpp  dl_typelib_write_txt.cpp.bak  dl_types.h  dl_util.cpp  dl_util.h
src/container/: dl_aligned_type.h  dl_array.h  dl_stack.h  dl_staticdata.h  dl_traits.h
src/getopt/: getopt.cpp  getopt.h
tests/: dl_test_common.h  dl_test_included.h  dl_test_pack_unpack.py  dl_test_valid_c.c  dl_tests.py  dl_tests_anyarray.cpp  dl_tests_anyptr.cpp  dl_tests_array.cpp  dl_tests_base.cpp  dl_tests_base.h  dl_tests_bitfield.cpp  dl_tests_dl.cpp  dl_tests_enum.cpp  dl_tests_error.cpp  dl_tests_inline_array.cpp  dl_tests_metadata.cpp  dl_tests_ptr.cpp  dl_tests_reflect.cpp  dl_tests_string.cpp  dl_tests_struct.cpp  dl_tests_txt.cpp  dl_tests_typelib.cpp  dl_tests_union.cpp  dl_tests_util.cpp  non_writable.txt  sized_enums.tld  small.tld  to_include.tld  unittest.tld  unittest2.tld
tests/csharp_bindings/: dl_tests.cs
tests/python_bindings/: dl_tests.py
tool/: bin2hex.lua
tool/dl_pack/: dl_pack.cpp
tool/dl_pack/getopt/: getopt.c  getopt.cpp  getopt.h
tool/dl_tlc/: dl_tlc.py  dltlc.cpp  header_writer_cpp.py  header_writer_cs.py  type_lib_writer.py
tool/dl_tlc/dl/: typelibrary.py
tool/dl_tlc/dl/generate/: __init__.py  c.py  cplusplus.py  cpp.py  cs.py  csharp.py
tool/dlpack/: dlpack.cpp
tool/dltlc/: dltlc.cpp
